--- a/views/edit.erb
+++ b/views/edit.erb
@@ -5,7 +5,8 @@
 	<body>
 		<h1>IdeaBox</h1>
 
-		<form action="/<%= id %>" method="POST">
+			<%= erb :form, locals: {idea: idea, id: id, mode: "edit"} %>
+<!-- 		<form action="/<%= id %>" method="POST">
 			<p>
 				Edit your Idea:
 			</p>
@@ -13,6 +14,6 @@
 			<input type='text' name='idea[title]' value="<%= idea.title %>"/><br/>
 			<textarea name='idea[description]'><%= idea.description %></textarea><br/>
 			<input type='submit'/>
-		</form>
+		</form> -->
 	</body>
 </html>
