added layout template

--- a/views/edit.erb
+++ b/views/edit.erb
@@ -1,7 +1,7 @@
-<html>
+<!-- <html>
 	<head>
 		<title>IdeaBox</title>
-	</head>
+	</head> -->
 	<body>
 		<h1>IdeaBox</h1>
 
@@ -16,4 +16,4 @@
 			<input type='submit'/>
 		</form> -->
 	</body>
-</html>
+<!-- </html> -->
