--- a/views/index.erb
+++ b/views/index.erb
@@ -1,7 +1,7 @@
-<html>
+<!-- <html>
 	<head>
 		<title>IdeaBox</title>
-	</head>
+	</head> -->
 	<body>
 		<h1>IdeaBox</h1>
 		
@@ -23,4 +23,4 @@
 			<% end %>
 		</ul>
 	</body>
-</html>
+<!-- </html> -->
